Reconfigured map, fixed nav desktop to vertically align.

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -3,7 +3,7 @@
 body, html
   width 100%
   height 100%
-  background white
+  background $cream
 
   .wrap
     display flex
@@ -46,7 +46,7 @@ body, html
           margin-left -100%
           width 220px
           height 100%
-          background red
+          background $white
           @media $tablet
             display none
         
@@ -54,7 +54,7 @@ body, html
           float left
           width calc(100% - 220px)
           height 100%
-          padding 0 15px
+          padding 50px 15px 0 15px
           box-sizing border-box
           @media $tablet
             padding 0 0
