--- a/styles/hamburger.styl
+++ b/styles/hamburger.styl
@@ -1,5 +1,5 @@
 #nav-icon
-  position absolute
+  position fixed
   top 15px
   right 25px
   width 35px
@@ -33,7 +33,7 @@
     position absolute
     height 5px
     width 100%
-    background #000
+    background $navy
     opacity 1
     left 0
     transform rotate(0deg)
