--- a/styles/nav.styl
+++ b/styles/nav.styl
@@ -1,20 +1,33 @@
-nav ul
+nav 
   display none
-
-  @media $tablet
-    list-style none
-    margin 0
-    padding 0
-    display flex
-    flex-flow row wrap
-    justify-content flex-end
   
-  a 
-    text-decoration none
+  @media $tablet
     display block
-    color black
-    text-align left
-    padding 1em
+    position relative
+    top 50%
+    transform translateY(-50%)
+    
+    ul
+      list-style none
+      margin 0
+      display flex
+      flex-flow row wrap
+      justify-content flex-end
+      li 
+        padding 0 15px
 
-    &:hover
-      text-decoration underline
+        &:nth-child(1)
+          padding-left 0
+
+        &:nth-child(3)
+          padding-right 0
+
+        a 
+          text-decoration none
+          display block
+          color black
+          text-align left
+          padding 1em
+
+          &:hover
+            text-decoration underline
